// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`core.public.isAcyclic If it is cyclic then it returns the circular dependency 1`] = `
Object {
  "cyclicDependencyID": "3",
  "isAcyclic": false,
  "message": "Cyclic dependency: 3",
}
`;

exports[`core.public.isAcyclic can test for acyclicity & return topologically sorted node IDs 1`] = `
Object {
  "isAcyclic": true,
  "topologicallySortedNodeIDs": Array [
    1,
    3,
    4,
    5,
    6,
    2,
    7,
    8,
  ],
}
`;

exports[`core.public.isAcyclic exports 1`] = `[Function]`;

exports[`core.public.isAcyclic it also handles different errors if somehow state is messed up 1`] = `
Object {
  "cyclicDependencyID": "undefined",
  "isAcyclic": false,
  "message": "Cyclic dependency: undefined",
}
`;
